--- a/tools/site/app/views/default/index.html
+++ b/tools/site/app/views/default/index.html
@@ -122,7 +122,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <p class="banner-info">
             These codelabs provide a guided, tutorial, hands-on coding experience on researches by InspiringGroup @ Tsinghua University INSC.
 			<br>
-			They cover a wide range of topics such as Privacy Computing, Blockchain Infrastructure, Machine Learning Systems, etc.
+			They cover a wide range of topics such as Privacy Computing, Blockchain Infrastructure, Machine Learning Systems, Applied Cryptography, etc.
             <br>
             <a style="color:#1A73E8;font-size:90%" href="https://inspiringgroup-codelab.readthedocs.io/zh_CN/latest/#">See more detailed docs of these codelabs</a>
 			<br>
@@ -237,41 +237,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       </div>
     </main>
 
-    <footer id="footer">
-      <div class="footer-wrapper site-width">
-        <div class="link-list">
-          <label>Connect</label>
-          <ul>
-            <li><a href="https://www.example.com/">Example</a></li>
-          </ul>
-        </div>
-        <div class="link-list">
-          <label>Programs</label>
-          <ul>
-            <li><a href="https://www.example.com/">Example</a></li>
-          </ul>
-        </div>
-        <div class="link-list">
-          <label>Developer Consoles</label>
-          <ul>
-            <li><a href="https://www.example.com/">Example</a></li>
-          </ul>
-        </div>
-        <div class="link-list">
-          <label>Explore</label>
-           <ul>
-            <li><a href="https://www.example.com/">Example</a></li>
-          </ul>
-        </div>
-      </div>
-    </footer>
-
     <div class="footerbar">
       <div class="site-width layout horizontal center justified">
         <span>
-          <a href="https://example.com">Terms</a>
+          <a href="https://inspiringgroup.github.io/">© 2021 InspiringGroup.</a>
           &nbsp; | &nbsp;
-          <a href="https://example.com">Privacy</a>
+          <a href="https://www.insc.tsinghua.edu.cn/">We are part of the Institute for Network Sciences and Cyberspace at Tsinghua University.</a>
         </span>
       </div>
     </div>
